# workshop-software-design-patterns

./: README.md  example-mkt-campaign-manager-c4-l1.puml  example-mkt-campaign-manager-c4-l2.puml  example-mkt-campaign-manager-c4-l3.puml
pubsub/: README.md  main.go  test.http
python/: Makefile  README.md  pyproject.toml
python/marketing_manager_api/: errors.py  models.py  pubsub.py  pubsub_adapter.py  webapi.py
