[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketing_manager_api"
description = "Marketing campaign manager API - Workshop Demo"
authors = [
    { name = "Dmitry Kisler", email = "admin@dkisler.com" },
]
requires-python = ">=3.10,<3.12"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "pydantic~=2.3.0",
]

[project.optional-dependencies]
tests = [
    "pytest~=7.3.1",
    "uvicorn~=0.23.2",
    "fastapi~=0.103.2",
    "requests~=2.31.0"
]
typing = [
    "mypy~=1.3.0"
]
lint = [
    "black~=23.7",
    "isort~=5.12.0",
]
dev = [
    "marketing_manager_api[tests,typing,lint]"
]

[tool.setuptools.packages.find]
include = ["marketing_manager_api*"]

[tool.setuptools.dynamic]
version = { attr = "marketing_manager_api.__version__" }

[tool.black]
skip-string-normalization = true
target-version = ["py310", "py311"]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.isort]
profile = "black"
